	  - Level check failure in QRinput_new2() on Windows has been fixed.
	* Bumped version to 4.1.1.
	[develop]
	* tests/release_check.sh:
	  - Release checker script has been added. Currently it checks only the
	    version numbers among scripts.
	* configure.ac:
	  - '--enable-mudflap' option has been deleted. (mudflap is deprecated
	    since GCC 4.9)

2020.09.27 Kentaro Fukuchi <kentaro@fukuchi.org>
	[develop]
	* NEWS:
	  - All tab characters have been replaced with spaces.
	* qrenc.c, qrencode.1.in:
	  - The effects of '--type' option's 'ASCII' and 'ASCIIi' have been
	    swapped. (closes #142)
	* .github/workflows/{configure,cmake}.yml:
	  - CI scripts have been improved to utilze multiple cores and cache.
	* tests/{test_basic.sh, test_qrenc.sh}:
	  - Code cleanups.
	[code cleanups]
	* various files:
	  - Cleanup compiler warnings.
	[develop]
	* Merged 'code cleanups' branch.
	* qrenc.c:
	  - Text output bug of structured append has been fixed.

2020.09.26 Kentaro Fukuchi <kentaro@fukuchi.org>
	[develop]
	* tests/test_qrencode.c:
	  - Minor memory leak bug in a test case has been fixed.
	* COPYING:
	  - Updated to the latest revision.
	* qrenc.c:
	  - Some URLs' schemes have been updated to https from http.
	* README.md, qrenc.c, qrencode.1.in, qrencode.[ch]:
	  - Copyright year has been updated.
	* .github/workflows/{configure,cmake,cmake-windows}.yml:
	  - Workflow names have been improved.
	* .travis.yml:
	  - Migration to Github Actions has been completed.
	* .github/workflows/{configure,cmake,cmake-windows}.yml:
	  - CI scripts have been improved.
	* README.md, makeREADME.sh:
	  - Status badge has been changed to show the result from the Github Actions
	    instead of Travis CI.

2020.09.22 Kentaro Fukuchi <kentaro@fukuchi.org>
	[develop]
	* mask.c, qrencode.h:
	  - Typos and grammer errors have been fixed.
	* Merge branch 'optimization'.

2020.09.21 Kentaro Fukuchi <kentaro@fukuchi.org>
	[optimization]
	* tests/prof_qrencode.c: