@@ -538,10 +538,11 @@ extern void QRcode_List_free(QRcode_List *qrlist);
  *****************************************************************************/
 
 /**
- * Return a string that identifies the library version.
- * @param major_version major version number
- * @param minor_version minor version number
- * @param micro_version micro version number
+ * Return the major.minor.micro version numbers that identifies the
+ * library version.
+ * @param major_version a pointer where to store the major version number
+ * @param minor_version a pointer where to store the minor version number
+ * @param micro_version a pointer where to store the micro version number
  */
 extern void QRcode_APIVersion(int *major_version, int *minor_version, int *micro_version);
 
